--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body{
 
 .textarea{
     width:100%;
-    font-size:2em;
+    font-size:0.8em;
     padding:10%;
     border-radius:min(10vw,10vh);
 }
@@ -26,4 +26,8 @@ textarea:focus{
 #preview code{
     background-color: grey;
     color:white;
+}
+#preview img{
+    width:50vw;
+    height:auto;
 }
